# FinAgent

./: .env.example  .gitignore  ARCHITECTURE_REFERENCE.md  LANCEMENT_RAPIDE.md  Makefile  README.md  TESTING_GUIDE.md  TEST_SUITE_SUMMARY.md  architecture_analysis.md  architecture_diagrams.md  config.yaml  demo_finagent.py  error_handling_robustness.md  global_architecture.md  interfaces_apis.md  memory_persistence.md  modular_structure.md  project_structure.md  pyproject.toml  pytest.ini  requirements.txt  security_api_management.md  strategy_system.md  technologies_dependencies.md  test_core_components.py  test_core_integration.py  test_validation.py
docs/: CLI_EXAMPLES.md  CLI_FAQ.md  CLI_QUICK_REFERENCE.md  CLI_USAGE_GUIDE.md  ollama_integration.md
examples/: ollama_usage_examples.py
finagent/: __init__.py  __main__.py  main.py
finagent/ai/: README.md  __init__.py  config.py  factory.py
finagent/ai/memory/: __init__.py  conversation_memory.py  decision_memory.py  market_memory.py  memory_manager.py
finagent/ai/models/: __init__.py  base.py  financial_analysis.py  memory.py  trading_decision.py
finagent/ai/prompts/: __init__.py  financial_analysis_prompts.py  prompt_manager.py  trading_decision_prompts.py
finagent/ai/providers/: __init__.py  claude_provider.py  ollama_provider.py
finagent/ai/services/: __init__.py  analysis_service.py  decision_service.py  model_discovery_service.py  sentiment_service.py  strategy_service.py
finagent/business/decision/: __init__.py  decision_engine.py  market_analyzer.py  risk_evaluator.py  signal_aggregator.py
finagent/business/models/: __init__.py  decision_models.py  portfolio_models.py
finagent/business/portfolio/: __init__.py  performance_tracker.py  portfolio_manager.py  position_manager.py  rebalancer.py
finagent/cli/: README.md  __init__.py  main.py
finagent/cli/commands/: __init__.py  ai_commands.py  analysis_commands.py  analyze_command.py  config_command.py  config_commands.py  decision_command.py  portfolio_command.py  strategy_command.py
finagent/cli/formatters/: __init__.py  analysis_formatter.py  base_formatter.py  decision_formatter.py  market_formatter.py  portfolio_formatter.py
finagent/cli/interactive/: __init__.py  menu_system.py  repl.py  wizard.py
finagent/cli/utils/: __init__.py  cache_utils.py  progress.py  validation.py
finagent/config/: settings.py
finagent/core/: config.py
finagent/core/errors/: exceptions.py
finagent/data/: README.md  __init__.py  cache.py  integration_test.py  validators.py
finagent/data/models/: __init__.py  base.py  market_data.py  news.py  technical_indicators.py
finagent/data/providers/: openbb_provider.py
finagent/tests/: test_ai_integration.py
scripts/: quick_test.py  run_full_test_suite.py  setup_ollama.py  validate_test_coverage.py
tests/: README.md  conftest.py  requirements-test.txt  test_config.yaml
tests/integration/: __init__.py  test_api_integration.py  test_cli_integration.py  test_data_persistence.py  test_end_to_end_scenarios.py  test_ollama_integration.py  test_strategy_portfolio_integration.py  test_workflow_integration.py
tests/performance/: __init__.py  test_algorithm_performance.py  test_api_performance.py  test_concurrent_performance.py  test_latency_benchmarks.py  test_load_testing.py  test_memory_profiling.py  test_stress_testing.py
tests/robustness/: __init__.py  test_error_handling.py  test_fault_tolerance.py  test_recovery_integrity.py
tests/security/: __init__.py  test_api_security.py  test_data_protection.py  test_input_validation.py
tests/unit/: __init__.py  test_claude_provider.py  test_cli.py  test_data_models.py  test_decision_models.py  test_openbb_provider.py  test_portfolio_manager.py  test_strategy_engine.py  test_strategy_models.py
tests/utils/: __init__.py  mock_providers.py  test_data_generator.py  test_fixtures.py  test_helpers.py
web_interface/: README.md  auth.html  index.html  test-responsive.html
web_interface/docs/: accessibility-implementation.md  accessibility-testing-guide.md  optimization-guide.md  project-completion-report.md  responsive-guide.md
web_interface/tests/: interface-validation.js
(+81 files in other folders)
